# textedit-demo

./: .clang-format  CLAUDE.md  CMakeLists.txt  main.cpp
src/: types.hpp
src/buffer/: ArrayBuffer.cpp  ArrayBuffer.hpp  BufferVisitor.cpp  BufferVisitor.hpp  IBuffer.hpp  ICursor.hpp  PieceTable.cpp  PieceTable.hpp  RopeBuffer.cpp  RopeBuffer.hpp
src/display/: TUIDisplay.cpp  TUIDisplay.hpp
src/editor/: Editor.cpp  Editor.hpp
src/server/: VisServer.cpp  VisServer.hpp
